#
#     /\_____/\
#    /  o   o  \
#   ( ==  ^  == )
#    )         (
#   (           )
#  ( (  )   (  ) )
# (__(__)___(__)__)
#
[tool.poetry]
name        = "mobile_sam"
version     = "1.0.0"
description = "This is the official code for MobileSAM project that makes SAM lightweight for mobile applications and beyond!"
license     = "Apache-2.0 license"
authors     = []
packages    = [
    {include="mobile_same"},
]
include     = []
exclude     = []

[tool.poetry.dependencies]
black       = "*"
flake8      = "*"
isort       = "*"
matplotlib  = "*"
mypy        = "*"
onnx        = "*"
onnxruntime = "*"
pycocotools = "*"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
